<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/banner_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/nmm"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/banner_reset_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/an_old_english_board_game"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_reset_password" />

    <EditText
        android:id="@+id/edit_email_address_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_reset_password_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_address_reset_password">

        <Button
            android:id="@+id/button_back_to_login_from_reset"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:text="@string/back"
            android:textSize="24sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:text="@string/reset"
            android:textSize="24sp"
            android:textStyle="normal" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>