<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/scores_container"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:text="@string/title"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="8dp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:id="@+id/winner"
            android:text="@string/winner"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/scores"
            android:text="Score"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/date"
            android:text="@string/date"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="normal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.cardview.widget.CardView>